# python-packages

./: Makefile  Makefile.col  Makefile.var  README.md  environment.yaml  pyproject.toml  requirements.txt  run.py  startup.sh
src/: main.py
src/cli/: cli.py
src/main/: main.py
src/package1/: __init__.py  module1.py
src/package2/: __init__.py  module2.py
